--- a/script/dockerfile
+++ b/script/dockerfile
@@ -2,11 +2,12 @@ FROM golang:1.20 as builder
 WORKDIR /opt/app
 COPY  ./app .
 ENV GOPROXY=https://goproxy.io,direct
-RUN cd  /opt/app/web/application/user/cmd/ && \
-    go build -o main main.go
+RUN cd  /opt/app/application/user/cmd && \
+go build -o main main.go
 
 FROM ubuntu:latest
 WORKDIR /opt/app
-COPY --from=builder /opt/app/web/application/user/cmd/main /opt/app/main
+COPY --from=builder /opt/app/application/user/cmd/main /opt/app/main
+COPY --from=builder /opt/app/config /opt/app/config
 EXPOSE 8001 9001
 CMD ["/opt/app/main"]
