--- a/config/jenkins.yaml
+++ b/config/jenkins.yaml
@@ -1,3 +1,3 @@
 address: http://111.230.143.16:8081
-username: admin
-password: 11fbfc1aab366147522f497f6c7d48b2ca
+username: linl
+password: 11522ed40b68696d823f4ffc8a7e433e59
