--- a/config/dbCheck.yaml
+++ b/config/dbCheck.yaml
@@ -1,6 +1,6 @@
 address: "gz-cdb-9tvaefsf.sql.tencentcdb.com"
 port: 63436
-database: "zhubaoe"
+database: "zhubaoe_check"
 table_prefix: "zby_"
 user: "root"
 password: "zby123456"
