--- a/tool/mq/init/docker-compose.yml
+++ b/tool/mq/init/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: apache/rocketmq:5.3.0
     container_name: rmqnamesrv
     ports:
-      - 9876:9876
+      - "9876:9876"
     networks:
       - rocketmq
     command: sh mqnamesrv
@@ -12,9 +12,9 @@ services:
     image: apache/rocketmq:5.3.0
     container_name: rmqbroker
     ports:
-      - 10909:10909
-      - 10911:10911
-      - 10912:10912
+      - "10909:10909"
+      - "10911:10911"
+      - "10912:10912"
     environment:
       - NAMESRV_ADDR=rmqnamesrv:9876
     depends_on:
@@ -31,8 +31,8 @@ services:
       - broker
       - namesrv
     ports:
-      - 8080:8080
-      - 8081:8081
+      - "8080:8080"
+      - "8081:8081"
     restart: on-failure
     environment:
       - NAMESRV_ADDR=rmqnamesrv:9876
@@ -42,7 +42,7 @@ services:
     image: apacherocketmq/rocketmq-dashboard:latest  # Replace with the appropriate image tag for the RocketMQ Dashboard
     container_name: rmqdash
     ports:
-      - 8082:8080  # Mapping to a different port to avoid conflicts
+      - "8082:8080"  # Mapping to a different port to avoid conflicts
     depends_on:
       - broker
       - namesrv
