--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,6 +1,6 @@
 ip: ""
 env: dev    # 可用于环境的区分
-grpc: local # 支持local,k8s,register
+grpc: local # 支持local,kubernetes,register
 servers:
   user:
     http_port: 8001
@@ -11,3 +11,6 @@ servers:
   authorization:
     http_port: 8003
     grpc_port: 9003
+  agent:
+    http_port: 8011
+    grpc_port: 9011
