--- a/doc/k8s/yaml/ingress.yaml
+++ b/doc/k8s/yaml/ingress.yaml
@@ -1,4 +1,4 @@
-apiVersion: networking.k8s.io/v1
+apiVersion: networking.kubernetes.io/v1
 kind: Ingress
 metadata:
   name: demo-ingrerss
@@ -20,7 +20,7 @@ spec:
 
 ---
 
-apiVersion: networking.k8s.io/v1
+apiVersion: networking.kubernetes.io/v1
 kind: IngressClass
 metadata:
   name: demo-ingress-class
