--- a/config/config.yaml
+++ b/config/config.yaml
@@ -8,7 +8,7 @@ servers:
   order:
     http_port: 8002
     grpc_port: 9002
-  authorization:
+  auth:
     http_port: 8003
     grpc_port: 9003
   agent:
