--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,10 +6,23 @@ services:
     container_name: consul
     networks:
       my-service-network:
-        ipv4_address: 172.40.0.2
+        ipv4_address: 172.40.0.11
     ports:
       - "8500:8500"
     command: agent -dev -ui -client='0.0.0.0'
+    restart: always
+
+  etcd:
+    image: bitnami/etcd:latest
+    container_name: etcd
+    networks:
+      my-service-network:
+        ipv4_address: 172.40.0.12
+    ports:
+      - "2379:2379"
+      - "2380:2380"
+    environment:
+      ALLOW_NONE_AUTHENTICATION: "yes"
     restart: always
 
   kong-database:
@@ -17,7 +30,7 @@ services:
     container_name: kong-database
     networks:
       my-service-network:
-        ipv4_address: 172.40.0.3
+        ipv4_address: 172.40.0.21
     ports:
       - "5432:5432"
     environment:
@@ -58,7 +71,7 @@ services:
         condition: service_started
     networks:
       my-service-network:
-        ipv4_address: 172.40.0.4
+        ipv4_address: 172.40.0.22
     ports:
       - "8000:8000"
       - "9080:9080"
@@ -67,14 +80,14 @@ services:
       - "8444:8444"
     environment:
       KONG_DATABASE: postgres
-      KONG_PG_HOST: 172.40.0.3
+      KONG_PG_HOST: 172.40.0.21
       KONG_PG_USER: kong
       KONG_PG_PASSWORD: kong
       KONG_PROXY_ACCESS_LOG: /dev/stdout
       KONG_ADMIN_ACCESS_LOG: /dev/stdout
       KONG_PROXY_ERROR_LOG: /dev/stderr
       KONG_ADMIN_ERROR_LOG: /dev/stderr
-      KONG_DNS_RESOLVER: 172.40.0.2:8600
+      KONG_DNS_RESOLVER: 172.40.0.11:8600
       KONG_DNS_ORDER: SRV,LAST,A,CNAME
       KONG_ADMIN_LISTEN: 0.0.0.0:8001, 0.0.0.0:8444 ssl
       KONG_PROXY_LISTEN: 0.0.0.0:8000, 0.0.0.0:9080 http2, 0.0.0.0:9081 http2 ssl
@@ -85,7 +98,7 @@ services:
     container_name: konga
     networks:
       my-service-network:
-        ipv4_address: 172.40.0.5
+        ipv4_address: 172.40.0.23
     ports:
       - "1337:1337"
     depends_on:
@@ -93,25 +106,12 @@ services:
         condition: service_healthy
     restart: always
 
-  etcd:
-    image: bitnami/etcd:latest
-    container_name: etcd
-    networks:
-      my-service-network:
-        ipv4_address: 172.40.0.6
-    ports:
-      - "2379:2379"
-      - "2380:2380"
-    environment:
-      ALLOW_NONE_AUTHENTICATION: "yes"
-    restart: always
-
   mysql:
     image: mysql:8.0
     container_name: mysql
     networks:
       my-service-network:
-        ipv4_address: 172.40.0.7
+        ipv4_address: 172.40.0.31
     ports:
       - "3306:3306"
     environment:
@@ -126,33 +126,12 @@ services:
       retries: 5     # 失败重试5次后标记为不健康
       start_period: 30s  # 容器启动后30秒开始检查
 
-  canal-server:
-    image: canal/canal-server:latest
-    container_name: canal-server
-    networks:
-      my-service-network:
-        ipv4_address: 172.40.0.8
-    ports:
-      - "11111:11111"
-    environment:
-      canal.instance.master.address: "172.40.0.7:3306"
-      canal.instance.dbUsername: "root"
-      canal.instance.dbPassword: "root123456"
-      canal.mq.topic: "canal"
-      canal.serverMode: "kafka"
-      canal.mq.flatMessage: "true"
-      kafka.bootstrap.servers: "159.75.1.200:9093"
-    depends_on:
-      mysql:
-        condition: service_healthy
-    restart: always
-
   redis:
     image: redis:7.2
     container_name: redis
     networks:
       my-service-network:
-        ipv4_address: 172.40.0.9
+        ipv4_address: 172.40.0.32
     ports:
       - "6379:6379"
     volumes:
@@ -168,6 +147,82 @@ services:
       timeout: 5s
       retries: 5
 
+  zookeeper:
+    image: bitnami/zookeeper:3.7
+    container_name: zookeeper
+    networks:
+      my-service-network:
+        ipv4_address: 172.40.0.33
+    ports:
+      - "2181:2181"
+    environment:
+      - ALLOW_ANONYMOUS_LOGIN=yes
+    volumes:
+      - zookeeper_data:/bitnami/zookeeper
+
+
+  kafka:
+    image: bitnami/kafka:2.8
+    container_name: kafka
+    networks:
+      my-service-network:
+        ipv4_address: 172.40.0.34
+    ports:
+      - "9092:9092"
+      - "9093:9093"
+    environment:
+      - KAFKA_CFG_ZOOKEEPER_CONNECT=172.40.0.33:2181
+      - KAFKA_CFG_LISTENERS=INTERNAL://:9092,EXTERNAL://:9093
+      - KAFKA_CFG_ADVERTISED_LISTENERS=INTERNAL://172.40.0.34:9092,EXTERNAL://172.40.0.34:9093
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
+      - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=INTERNAL
+      - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
+      - ALLOW_PLAINTEXT_LISTENER=yes
+    volumes:
+      - kafka_data:/bitnami/kafka
+    depends_on:
+      - zookeeper
+    healthcheck:
+      test: [ "CMD-SHELL", "kafka-broker-api-versions.sh --bootstrap-server localhost:9092 || exit 1" ]
+      interval: 10s
+      timeout: 5s
+      retries: 6
+      start_period: 40s
+
+  canal-server:
+    image: canal/canal-server:latest
+    container_name: canal-server
+    networks:
+      my-service-network:
+        ipv4_address: 172.40.0.41
+    ports:
+      - "11111:11111"
+    environment:
+      canal.instance.master.address: "172.40.0.31:3306"
+      canal.instance.dbUsername: "root"
+      canal.instance.dbPassword: "root123456"
+      canal.mq.topic: "canal"
+      canal.serverMode: "kafka"
+      canal.mq.flatMessage: "true"
+      kafka.bootstrap.servers: "172.40.0.34:9093"
+    depends_on:
+      mysql:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
+    restart: always
+
+  kafka-ui:
+    image: provectuslabs/kafka-ui:latest
+    container_name: kafka-ui
+    networks:
+      my-service-network:
+        ipv4_address: 172.40.0.42
+    ports:
+      - "8080:8080"
+    environment:
+      - KAFKA_CLUSTERS_0_NAME=local
+      - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=172.40.0.34:9092
 
 networks:
   my-service-network:
@@ -180,3 +235,5 @@ volumes:
   pg-data:
   mysql-data:
   redis-data:
+  kafka_data:
+  zookeeper_data:
