--- a/config/online/db.yaml
+++ b/config/online/db.yaml
@@ -1,6 +1,7 @@
-address: "gz-cdb-1mm5h1lv.sql.tencentcdb.com"
-port: 58526
+address: "gz-cdb-9tvaefsf.sql.tencentcdb.com"
+port: 63436
 database: "zhubaoe"
 table_prefix: "zby_"
 user: "root"
-password: "zhubaoe!QAZ"
+password: "zby123456"
+
