--- a/script/user/kubernetes.yaml
+++ b/script/user/kubernetes.yaml
@@ -1,42 +1,39 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: user-v1-deployment
+  name: user-deployment
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: user
-      version: v1
   template:
     metadata:
       labels:
         app: user
-        version: v1
     spec:
       containers:
         - name: user-container
-          image: ccr.ccs.tencentyun.com/linl/user:v1
+          image: user
           ports:
-            - containerPort: 8001
-            - containerPort: 9001
+            - containerPort: 18001
+            - containerPort: 19001
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: user
-  namespace: normal
+  name: user-service
 spec:
   selector:
     app: user
   ports:
     - protocol: TCP
-      port: 8001
-      targetPort: 8001
-      name: user-port-8001
+      port: 18001
+      targetPort: 18001
+      name: user-http-port-18001
     - protocol: TCP
-      port: 9001
-      targetPort: 9001
-      name: user-port-9001
+      port: 19001
+      targetPort: 19001
+      name: user-grpc-port-19001
   type: ClusterIP
