--- a/script/order/dockerfile
+++ b/script/order/dockerfile
@@ -12,6 +12,11 @@ ENV GOPROXY=https://goproxy.io,direct
 RUN cd  /app/application/order/cmd && go build -o main main.go
 
 FROM ubuntu:latest
+ENV TZ=Asia/Shanghai
+RUN apt-get update && \
+    apt-get install -y tzdata && \
+    ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && \
+    echo $TZ > /etc/timezone
 WORKDIR /opt/app
 COPY --from=builder /app/application/order/cmd/main /opt/app/main
 COPY --from=builder /app/config /opt/app/config
