--- a/script/user/kubernetes.yaml
+++ b/script/user/kubernetes.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: user-container
-          image: user
+          image: ubuntu:latest
           ports:
             - containerPort: 18001
             - containerPort: 19001
