--- a/script/auth/kubernetes.yaml
+++ b/script/auth/kubernetes.yaml
@@ -13,7 +13,7 @@ spec:
         app: auth
     spec:
       containers:
-        - name: auth-container
+        - name: container
           image: ubuntu:latest
           ports:
             - containerPort: 18003
