--- a/protoc/Makefile
+++ b/protoc/Makefile
@@ -1,3 +1,9 @@
+.PHONY: init
+init:
+	go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
+	go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
+	go install github.com/google/gnostic/cmd/protoc-gen-openapi@latest
+
 .PHONY: gen
 gen:
 	protoc --proto_path=./ \
